--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,13 @@
-# dependências e builds
-node_modules/
-.next/
-out/
-dist/
-coverage/
-
-# env/segredos
+# Node/Next
+node_modules
+.next
+out
 .env
 .env.*
-!.env.example
-
-# caches e editor
-npm-debug.log*
-yarn-debug.log*
-pnpm-debug.log*
-.vscode/
 .DS_Store
 
-# se tiver pastas vazias que quer manter:
-# crie arquivos .gitkeep dentro delas
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
